fix #706 show more link semibold & fix #708 less explanatory text on mobile

--- a/web/src/components/pages/home/home.css
+++ b/web/src/components/pages/home/home.css
@@ -72,12 +72,26 @@
     margin-bottom: var(--standard-margin);
 }
 
-#show-more-text {
+#show-more-button {
     font-size: var(--small-font-size);
-    font-weight: bold;
+    font-weight: 600;
     text-transform: uppercase;
     text-decoration: underline;
     cursor: pointer;
+}
+
+.more-text-desktop {
+    display: none;
+}
+
+@media (--mobile) {
+    .more-text-mobile {
+        display: none;
+    }
+}
+
+.show-more-text .more-text-mobile, .show-more-text .more-text-desktop {
+    display: block;
 }
 
 #help-explain {
